--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Infinite Web</title>
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="c18f925d-d762-469a-b813-eb2a5086a092"></script>
 </head>
 <body>
 {{ content|safe }}
